tests/errors/struct_type_mismatch.re
struct a {
    x: arr[int, 1]
}
fn main() {
    let x = a {x: 2};
}